--- a/iOS/Onetrack/Base.lproj/Main.storyboard
+++ b/iOS/Onetrack/Base.lproj/Main.storyboard
@@ -6,6 +6,60 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
+        <!--Login View Controller-->
+        <scene sceneID="6q9-fc-s8B">
+            <objects>
+                <viewController id="Fol-1C-u9s" customClass="LoginViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="vsR-Xx-T5N"/>
+                        <viewControllerLayoutGuide type="bottom" id="9lD-H0-9XQ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="cNV-iv-LsJ">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="OneTrack!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ms2-HF-AHd">
+                                <rect key="frame" x="116" y="20" width="369" height="58"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Mj-87-Hwa">
+                                <rect key="frame" x="20" y="81" width="560" height="438"/>
+                                <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            </scrollView>
+                            <pageControl opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="Am8-N2-sX8">
+                                <rect key="frame" x="281" y="473" width="39" height="37"/>
+                            </pageControl>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="crs-iN-avL">
+                                <rect key="frame" x="20" y="527" width="560" height="65"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="4Mj-87-Hwa" firstAttribute="leading" secondItem="cNV-iv-LsJ" secondAttribute="leadingMargin" id="2sa-Y4-Zcu"/>
+                            <constraint firstItem="crs-iN-avL" firstAttribute="leading" secondItem="4Mj-87-Hwa" secondAttribute="leading" id="7aV-Y0-BuE"/>
+                            <constraint firstItem="crs-iN-avL" firstAttribute="trailing" secondItem="4Mj-87-Hwa" secondAttribute="trailing" id="8sY-Oa-oUk"/>
+                            <constraint firstItem="4Mj-87-Hwa" firstAttribute="centerX" secondItem="Am8-N2-sX8" secondAttribute="centerX" id="O5y-wY-o1w"/>
+                            <constraint firstItem="9lD-H0-9XQ" firstAttribute="top" secondItem="crs-iN-avL" secondAttribute="bottom" constant="8" symbolic="YES" id="VhR-f3-vtv"/>
+                            <constraint firstItem="Am8-N2-sX8" firstAttribute="top" secondItem="4Mj-87-Hwa" secondAttribute="bottom" constant="36" id="WL5-SC-TZC"/>
+                            <constraint firstItem="crs-iN-avL" firstAttribute="top" secondItem="4Mj-87-Hwa" secondAttribute="bottom" constant="8" symbolic="YES" id="hr7-11-RxZ"/>
+                            <constraint firstItem="4Mj-87-Hwa" firstAttribute="top" secondItem="ms2-HF-AHd" secondAttribute="bottom" constant="3" id="i0Q-Tl-OgA"/>
+                            <constraint firstItem="4Mj-87-Hwa" firstAttribute="trailing" secondItem="cNV-iv-LsJ" secondAttribute="trailingMargin" id="itk-ln-hhN"/>
+                            <constraint firstItem="4Mj-87-Hwa" firstAttribute="centerX" secondItem="ms2-HF-AHd" secondAttribute="centerX" id="kMA-M3-h5I"/>
+                            <constraint firstItem="4Mj-87-Hwa" firstAttribute="top" secondItem="cNV-iv-LsJ" secondAttribute="top" constant="81" id="ngj-Zf-TUC"/>
+                            <constraint firstItem="4Mj-87-Hwa" firstAttribute="centerY" secondItem="cNV-iv-LsJ" secondAttribute="centerY" id="w9N-tL-ai6"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="buttonView" destination="crs-iN-avL" id="VnP-Ud-vqw"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tc9-0t-Heb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="642" y="-159"/>
+        </scene>
         <!--OneTrack-->
         <scene sceneID="QN0-PE-dvp">
             <objects>
@@ -105,11 +159,12 @@
                     </navigationItem>
                     <connections>
                         <outlet property="editButton" destination="kFp-Ff-JNY" id="VSJ-mA-qib"/>
+                        <segue destination="Fol-1C-u9s" kind="presentation" identifier="LoginSegue" id="usr-UJ-I0Q"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ag5-Om-IyH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="642" y="546"/>
+            <point key="canvasLocation" x="648" y="680"/>
         </scene>
         <!--Create Tracker-->
         <scene sceneID="lym-gB-Zii">
@@ -155,11 +210,21 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IXi-vA-Lg4">
+                                <rect key="frame" x="272" y="516" width="57" height="30"/>
+                                <state key="normal" title="Settings"/>
+                                <connections>
+                                    <segue destination="Fol-1C-u9s" kind="presentation" id="mrL-9y-48Q"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.64146374241199666" green="0.68595699499713714" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
+                            <constraint firstAttribute="bottom" secondItem="IXi-vA-Lg4" secondAttribute="bottom" constant="54" id="0P3-Hr-bFi"/>
+                            <constraint firstItem="Dc6-Ja-mZa" firstAttribute="top" secondItem="IXi-vA-Lg4" secondAttribute="bottom" constant="16" id="6fG-aW-m3D"/>
                             <constraint firstItem="gv5-Dx-6SI" firstAttribute="leading" secondItem="1YT-uK-V2P" secondAttribute="leading" id="9Zd-Jg-Tu7"/>
                             <constraint firstItem="gv5-Dx-6SI" firstAttribute="leading" secondItem="NK2-n3-xdN" secondAttribute="trailing" constant="8" symbolic="YES" id="DZC-wO-YNu"/>
+                            <constraint firstItem="IXi-vA-Lg4" firstAttribute="centerX" secondItem="Dc6-Ja-mZa" secondAttribute="centerX" id="I8J-0R-wEf"/>
                             <constraint firstItem="gv5-Dx-6SI" firstAttribute="trailing" secondItem="1YT-uK-V2P" secondAttribute="trailing" id="PDp-F6-gfE"/>
                             <constraint firstItem="1YT-uK-V2P" firstAttribute="top" secondItem="d38-wF-6Wf" secondAttribute="bottom" constant="194" id="YhH-Ju-KTC"/>
                             <constraint firstItem="3Au-H0-5cA" firstAttribute="leading" secondItem="bFi-ut-kdE" secondAttribute="leadingMargin" constant="42" id="a09-kp-2lp"/>
@@ -292,4 +357,7 @@
             <point key="canvasLocation" x="1473" y="589"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="mrL-9y-48Q"/>
+    </inferredMetricsTieBreakers>
 </document>
