--- a/iOS/Onetrack/Base.lproj/Main.storyboard
+++ b/iOS/Onetrack/Base.lproj/Main.storyboard
@@ -98,7 +98,7 @@
                                 <rect key="frame" x="0.0" y="92" width="600" height="60"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="XF5-XU-i6c" id="QZA-re-ia4">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="59"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="59.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <view tag="20" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jza-az-TKX">
@@ -109,19 +109,19 @@
                                                 <constraint firstAttribute="width" constant="44" id="TvH-7b-mo3"/>
                                             </constraints>
                                         </view>
-                                        <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="99 / 100" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="feW-sT-gyZ">
+                                        <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="99 / 100" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="feW-sT-gyZ">
                                             <rect key="frame" x="250" y="8" width="298" height="38"/>
                                             <fontDescription key="fontDescription" name="MyriadPro-Bold" family="Myriad Pro" pointSize="38"/>
                                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" tag="5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A4h-1u-6gT">
-                                            <rect key="frame" x="8" y="41" width="31" height="15"/>
+                                            <rect key="frame" x="10" y="41" width="31" height="15"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Tracking Item" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yak-ak-vMe">
+                                        <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Tracking Item" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yak-ak-vMe">
                                             <rect key="frame" x="8" y="8" width="232" height="38"/>
                                             <fontDescription key="fontDescription" name="MyriadPro-Bold" family="Myriad Pro" pointSize="38"/>
                                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -137,7 +137,7 @@
                                         <constraint firstItem="feW-sT-gyZ" firstAttribute="top" secondItem="QZA-re-ia4" secondAttribute="topMargin" id="STo-MJ-Z3w"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="jza-az-TKX" secondAttribute="trailing" constant="-10" id="UtT-Vr-HcZ"/>
                                         <constraint firstItem="Yak-ak-vMe" firstAttribute="leading" secondItem="QZA-re-ia4" secondAttribute="leadingMargin" id="eXf-G7-zYr"/>
-                                        <constraint firstItem="A4h-1u-6gT" firstAttribute="leading" secondItem="QZA-re-ia4" secondAttribute="leadingMargin" id="fpa-G2-MBp"/>
+                                        <constraint firstItem="A4h-1u-6gT" firstAttribute="leading" secondItem="QZA-re-ia4" secondAttribute="leadingMargin" constant="2" id="fpa-G2-MBp"/>
                                         <constraint firstItem="feW-sT-gyZ" firstAttribute="leading" secondItem="Yak-ak-vMe" secondAttribute="trailing" constant="10" id="h3m-yE-eTx"/>
                                         <constraint firstItem="A4h-1u-6gT" firstAttribute="bottom" secondItem="QZA-re-ia4" secondAttribute="bottomMargin" constant="5" id="pI4-RW-03k"/>
                                     </constraints>
